--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,12 +1,11 @@
 .card {
   position: relative;
-  width: 300px;
-  height: 400px;
+  width: 200px;
+  height: 300px;
   background-size: cover;
   background-position: center;
   margin: 10px;
   border-radius: 10px;
-  overflow: hidden;
   color: white;
 }
 
@@ -14,6 +13,23 @@
   position: absolute;
   bottom: 10px;
   left: 10px;
+}
+
+.card.large {
+  /* Styles for the active card */
+  width: 100%; /* Cover the entire section */
+  height: 100vh; /* Full viewport height */
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.card.large .card-content {
+  /* Larger text and positioned to the bottom left */
+  font-size: 2em; /* Example */
+  position: absolute;
+  bottom: 20px;
+  left: 20px;
 }
 
 .content-place {
