--- a/src/components/CardCarousel/CardCarousel.css
+++ b/src/components/CardCarousel/CardCarousel.css
@@ -1,5 +1,97 @@
-.carousel {
+.carousel-section {
+  position: relative;
+  height: 70vh;
+  width: 100%;
+  margin: auto;
+}
+
+@media (max-width: 768px) {
+  .carousel-section {
+    height: 100vh;
+    width: 100%;
+  }
+}
+
+.background-image {
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-position: center;
+  position: relative;
+}
+
+.small-cards-container {
+  position: absolute;
+  top: 5px;
+  right: 0;
   display: flex;
-  overflow-x: scroll;
+  flex-direction: row;
+  align-items: center;
+  overflow-x: hidden; /* Hide overflow only horizontally */
+  max-width: 33vw; /* Ensure the container doesn't exceed 1/3 of the viewport width */
+  padding: 10px 0; /* Add padding to ensure cards are not cut off */
+  z-index: 10; /* Ensure small cards are above the background */
+}
+
+.small-card {
+  width: 150px;
+  height: 300px;
+  margin: 0 20px; /* Increased spacing between cards */
+  transition: transform 0.3s ease;
+  flex-shrink: 0;
+  padding-right: 25px;
+}
+
+.Card {
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-position: center;
+  border-radius: 10px;
+  overflow: hidden;
+}
+
+.active-card-info {
+  position: absolute;
+  bottom: 10px;
+  left: 10px;
+  background: rgba(0, 0, 0, 0.5);
+  color: white;
   padding: 20px;
+  border-radius: 10px;
+  max-width: 300px;
+}
+
+.active-card-info h2 {
+  margin: 0 0 10px 0;
+}
+
+.active-card-info p {
+  margin: 5px 0;
+}
+
+.arrows {
+  display: flex;
+  justify-content: right;
+  position: absolute;
+  top: 55%;
+  width: 75%;
+  transform: translateY(50%);
+}
+
+.arrow {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: rgba(255, 255, 255, 0.7);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 10px;
+  cursor: pointer;
+}
+
+.arrow svg {
+  width: 24px;
+  height: 24px;
 }
