--- a/src/components/HomeSections/FeatureSection/featureSection.css
+++ b/src/components/HomeSections/FeatureSection/featureSection.css
@@ -1,27 +1,111 @@
 .feature-section {
-  padding: 50px 20px;
+  padding: 50px;
   text-align: center;
+  background-color: #f5f5f5;
+}
+
+.rotating-word-section {
+  font-size: 2.5rem;
+}
+
+.rotating-word-container {
+  display: inline-block;
+  position: relative;
+  width: 200px; /* Adjust this width to ensure it matches the length of the longest word */
+  height: 1.2em;
+  overflow: hidden;
+  vertical-align: bottom;
+}
+
+.rotating-word {
+  display: inline-block;
+  position: absolute;
+  width: 100%;
+  left: 0;
+}
+
+.underline {
+  width: 200px; /* Match this width to the rotating-word-container width */
+  height: 5px;
+  background-color: #145214; /* Adjust the color as needed */
+  margin-top: 40px; /* Adjust the value to move the underline further down */
 }
 
 .features {
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
+  margin-top: 30px;
 }
 
-.feature {
-  flex: 1;
-  margin: 20px;
-  padding: 20px;
-  border: 1px solid #ddd;
+.feature-card {
+  perspective: 1000px; /* Prevents the 3D effect from being distorted */
+  flex: 1 1 30%;
+  max-width: 30%;
+  margin: 10px;
+  box-sizing: border-box;
+}
+
+.feature-card-inner {
+  position: relative;
+  width: 100%;
+  height: 200px;
+  text-align: center;
+  transition: transform 0.6s;
+  transform-style: preserve-3d;
+}
+
+.feature-card:hover .feature-card-inner {
+  transform: rotateY(180deg);
+}
+
+.feature-card-front {
+  font-size: 4vh;
+}
+
+.feature-card-front,
+.feature-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
   border-radius: 8px;
-  max-width: 300px;
+  box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+  box-sizing: border-box;
 }
 
-.feature h3 {
+.feature-card-front {
+  background-color: white;
+}
+
+.feature-card-back {
+  background: linear-gradient(135deg, #1a472a, #2a623d, #42bd6b);
+  color: white;
+  transform: rotateY(180deg);
+  flex-direction: column;
+}
+
+
+.feature-card-back h3 {
   margin-bottom: 10px;
 }
 
-.feature p {
-  color: #555;
+.feature-card-back p {
+  margin: 0;
+}
+
+
+
+@media (max-width: 768px) {
+  .features {
+    flex-direction: column;
+  }
+
+  .feature-card {
+    max-width: 100%;
+  }
 }
