--- a/src/App.css
+++ b/src/App.css
@@ -2,13 +2,13 @@
   text-align: center;
 }
 
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;800&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Judson:ital,wght@0,400;0,700;1,400&display=swap');
 
 body {
   min-height: 100vh;
   display: grid;
   place-items: center;
   background-color: var(--bg);
-  color: #fff;
-  font-family: "Inter", "DM Sans", Arial, sans-serif;
+  color: var(--text-color);
+  font-family: "Inter", "Judson", "DM Sans", Arial, sans-serif;
 }
