--- a/src/components/HomeSections/ContactSection/ContactSection.css
+++ b/src/components/HomeSections/ContactSection/ContactSection.css
@@ -10,15 +10,26 @@
   margin-bottom: 10px;
 }
 
-.contact-subheading {
-  font-size: 1.2rem;
-  margin-bottom: 20px;
+.contact-subheading p {
+  font-size: 2rem;
+  margin-bottom: 5px;
 }
 
 .contact-form {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin: 10px;
+}
+
+.contact-form-container {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 30px; /* Adjust the gap as needed */
+  width: 100%;
+  max-width: 800px;
+  margin: 0 auto;
 }
 
 .contact-form input {
@@ -28,6 +39,11 @@
   border: 1px solid #ccc;
   border-radius: 10px;
   font-size: 1rem;
+}
+
+.form-section-title {
+  font-size: 1rem;
+  margin-bottom: 10px;
 }
 
 .checkbox-group {
