--- a/src/components/HomeSections/FeatureSection/featureSection.css
+++ b/src/components/HomeSections/FeatureSection/featureSection.css
@@ -1,11 +1,12 @@
 .feature-section {
   padding: 50px;
   text-align: center;
-  background-color: #f5f5f5;
+  background-color: #101010;
 }
 
 .rotating-word-section {
   font-size: 2.5rem;
+  color: var(--text-color);
 }
 
 .rotating-word-container {
@@ -33,79 +34,78 @@
 
 .features {
   display: flex;
-  justify-content: space-around;
-  flex-wrap: wrap;
+  flex-direction: column; /* Default to column layout for mobile */
+  align-items: center;
   margin-top: 30px;
 }
 
 .feature-card {
-  perspective: 1000px; /* Prevents the 3D effect from being distorted */
-  flex: 1 1 30%;
-  max-width: 30%;
-  margin: 10px;
-  box-sizing: border-box;
+  width: 80%; /* Adjust to take up most of the width on mobile */
+  margin: 10px 0; /* Ensure some margin between the cards on mobile */
+  border-radius: 8px;
+  overflow: hidden;
+  position: relative;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 250px;
+  transition: transform 0.3s ease, background-size 0.3s ease;
 }
 
 .feature-card-inner {
-  position: relative;
-  width: 100%;
-  height: 200px;
-  text-align: center;
-  transition: transform 0.6s;
-  transform-style: preserve-3d;
-}
-
-.feature-card:hover .feature-card-inner {
-  transform: rotateY(180deg);
-}
-
-.feature-card-front {
-  font-size: 4vh;
-}
-
-.feature-card-front,
-.feature-card-back {
   position: absolute;
-  width: 100%;
-  height: 100%;
-  backface-visibility: hidden;
-  border-radius: 8px;
-  box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  justify-content: flex-end; /* Start with the title at the bottom */
   align-items: center;
+  background-color: rgba(0, 0, 0, 0.1); /* Dark overlay for text readability */
+  color: white;
+  text-align: center;
   padding: 20px;
   box-sizing: border-box;
 }
 
-.feature-card-front {
-  background-color: white;
+.feature-card-inner h3 {
+  margin-bottom: -40px; /* Space the title from the bottom */
+  font-size: 1.5rem;
+  transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out;
 }
 
-.feature-card-back {
-  background: linear-gradient(135deg, #1a472a, #2a623d, #42bd6b);
-  color: white;
-  transform: rotateY(180deg);
-  flex-direction: column;
-}
-
-
-.feature-card-back h3 {
-  margin-bottom: 10px;
-}
-
-.feature-card-back p {
+.feature-card-inner p {
   margin: 0;
+  opacity: 0;
+  transform: translateY(20px);
+  transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out;
+  height: 25%;
 }
 
+.feature-card:hover .feature-card-inner {
+  justify-content: center; /* Center content on hover */
+  background-color: rgba(0, 0, 0, 0.5); /* Dark overlay for text readability */
+}
 
+.feature-card:hover h3 {
+  transform: translateY(-50px); /* Move the title up */
+}
 
-@media (max-width: 768px) {
+.feature-card:hover p {
+  opacity: 1;
+  transform: translateY(0); /* Move the description into view */
+}
+
+@media (min-width: 769px) {
   .features {
-    flex-direction: column;
+    flex-direction: row; /* Arrange cards in a row on desktop */
+    justify-content: space-around;
   }
 
   .feature-card {
-    max-width: 100%;
+    width: 30%; /* Adjusts to 30% width on desktop */
+    max-width: 30%; /* Ensures the cards don't grow too large */
+    margin: 10px; /* Margin between the cards */
   }
 }
