--- a/src/components/CircleAnimation/CircleAnimation.css
+++ b/src/components/CircleAnimation/CircleAnimation.css
@@ -52,7 +52,7 @@
 #line-container line {
   stroke: #FAF9F6; /* or any color that suits your design */
   stroke-width: 0.4vw; /* Adjust width based on your design */
-  /* opacity: 1; /* Set opacity to 1 to ensure they are visible */
+  opacity: 0; 
   stroke-linecap: round; /* Optional: gives the line rounded ends */
   
 }
@@ -60,44 +60,92 @@
 
 .hidden-text {
   position: absolute;
-  left: 25vw;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
   font-size: 5vh;
   color: #FAF9F6;
   text-shadow: 1px 1px 2px #1D1B26;
   opacity: 0;
   font-family: "Inter";
+  z-index: 5;
 }
 
 @media (max-width: 768px) {
   .animation-container {
+    display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 50vh;
+    height: 80%;
     position: relative;
-    padding: 0;
+    padding-top: 0;
+  }
+
+  .circle-wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    position: absolute;
+    width: 12vw; /* Match this with the circle width */
+    height: 100%;
+    left: 50%;
+    transform: translateX(-50%); /* Center horizontally */
+  }
+
+  #line-container {
+    position: absolute;
+    width: 12vw; /* Match this with the circle width */
+    height: 100%;
+    left: 50%;
+    transform: translateX(-50%); /* Center horizontally */
+    z-index: 5;
   }
 
   .circle {
-    width: 60px;
-    height: 60px;
-    margin-bottom: 15px;
+    width: 12vw; /* Adjust size for mobile */
+    height: 12vw; /* Adjust size for mobile */
   }
 
   .dot {
-    width: 15px;
-    height: 15px;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    display: none;
-    background-color: #145214;
-    border-radius: 50%;
+    width: 3vw; /* Adjust size for mobile */
+    height: 3vw; /* Adjust size for mobile */
     z-index: 10;
   }
 
   #sights-studios {
     font-size: 3vh;
+    text-align: center; /* Align the text to the left */
+    position: absolute;
+    top: 50%;
+    left: 50%; /* Align it to the left edge of the container */
+    transform: translateY(-50%, -50%); /* Center vertically */
+    opacity: 0; /* Initially hidden */
+    width: 100%;
   }
+
+  .scroll-arrow {
+    font-size: 3vh;
+    text-align: center;
+    position: absolute;
+    bottom: 10%;
+    left: 50%;
+    transform: translateX(-50%);
+    animation: bounce 1.5s infinite ease-in-out;
+    transition: transform 1s ease; /* Smooth transition for the move */
+    opacity: 0;
+    display: block;
+  }
+  
+  @keyframes bounce {
+    0%, 100% {
+      transform: translate(-50%, 0);
+    }
+    50% {
+      transform: translate(-50%, -15px);
+    }
+  }
+  
 }
