--- a/src/components/HomeSections/ContactSection/ContactSection.css
+++ b/src/components/HomeSections/ContactSection/ContactSection.css
@@ -1,5 +1,5 @@
 .contact-section {
-  background-color: #f0f0f0;
+  background-color: var(--text-color);
   padding: 50px;
   text-align: center;
   font-family: 'Inter';
@@ -20,20 +20,36 @@
   flex-direction: column;
   align-items: center;
   margin: 10px;
+  flex: 1;
 }
 
 .contact-form-container {
   display: flex;
-  justify-content: center;
-  align-items: flex-start;
-  gap: 30px; /* Adjust the gap as needed */
+  flex-direction: column; /* Side by side for form and checkbox group */
+  justify-content: space-between; /* Equal space between form and checkbox group */
+  align-items: flex-start; /* Align items to the top */
+  gap: 30px;
   width: 100%;
   max-width: 800px;
   margin: 0 auto;
+  position: relative; /* Necessary for centering the submit button */
+}
+
+.contact-form-input-groups {
+  display: flex;
+  justify-content: space-between; /* Side by side for form and checkbox group */
+  gap: 30px;
+  width: 100%;
+}
+
+.contact-form,
+.checkbox-group {
+  flex: 1; /* Ensure both sections take up equal space */
+  max-width: 350px; /* Control the width of each section */
 }
 
 .contact-form input {
-  width: 300px;
+  width: 100%;
   padding: 10px;
   margin: 10px 0;
   border: 1px solid #ccc;
@@ -49,8 +65,11 @@
 .checkbox-group {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: center;
   margin: 10px 0;
+  width: 100%;
+  max-width: 300px;
+  flex: 1;
 }
 
 .checkbox-group label {
@@ -85,13 +104,14 @@
 }
 
 .cta-button {
-  margin-top: 20px;
+  margin-top: 30px;
   padding: 10px 20px;
   font-size: 1.2rem;
   color: white;
   background-color: #007BFF;
   border: none;
   cursor: pointer;
+  align-self: center; /* Center the button below both sections */
 }
 
 .cta-button:hover {
@@ -101,14 +121,9 @@
 
 /* Flex column direction for mobile view */
 @media (max-width: 768px) {
-  .contact-section {
-    display: flex;
+  .contact-form-input-groups {
+    align-items: center; /* Center align the items */
     flex-direction: column;
-  }
-  
-  .contact-form-container {
-    flex-direction: column;
-    align-items: center;
     gap: 0;
   }
 
