--- a/src/components/AboutSections/AboutPage.css
+++ b/src/components/AboutSections/AboutPage.css
@@ -22,12 +22,14 @@ h2 {
   justify-content: space-between;
   text-align: center;
   padding: 100px 50px 50px 50px;
+  position: relative;
 }
 
 .about-hero-content {
   max-width: 50%;
   margin-left: 50px;
   padding-left: 50px;
+  z-index: 2;
 }
 
 .about-hero-content h1 {
@@ -43,6 +45,7 @@ h2 {
 .about-hero-image {
   position: relative;
   max-width: 50%;
+  z-index: 1; /* Ensure image stays above overlay */
 }
 
 .about-hero-image img {
@@ -50,7 +53,7 @@ h2 {
   width: 50%;
   height: auto;
   border-radius: 50%;
-  z-index: 1;
+  z-index: 2;
 }
 
 .green-overlay {
@@ -72,7 +75,7 @@ h2 {
     flex-direction: column;
     text-align: center;
     padding: 50px 20px 20px 20px;
-    height: 50vh;
+    height: auto;
   }
 
   .about-hero-content {
