--- a/src/components/ContactPage/ContactPage.css
+++ b/src/components/ContactPage/ContactPage.css
@@ -92,32 +92,53 @@
   margin: 10px;
 }
 
+.error-message {
+  color: #ff4d4f; /* Red color for errors */
+  margin-bottom: 15px;
+  font-size: 1.1rem;
+  text-align: center;
+}
+
 @media (max-width: 768px) {
   .talk-content {
     display: flex;
     justify-content: center;
   }
   .talk-box {
-    width: 90%;
+    width: 80%;
     height: auto;
   }
   .form-row {
     flex-direction: column;
     align-items: flex-start;
+    width: 100%;
+    margin-bottom: 15px; /* Add some space between rows */
+    
   }
 
   #name-line, #role-line, #company-line, #email-line {
     flex-direction: row;
+    width: 100%; /* Make sure the lines take full width */
   }
 
   .form-row input,
   .form-row select {
-    width: calc(100% - 20px); /* to account for padding */
+    width: 100%; /* Adjust to full width for input and select elements */
   }
 
   .form-row span {
+    flex: 0 0 auto; /* Keep the span elements aligned naturally with the text */
     padding-top: 5px;
+    margin-right: 5px;
   }
+
+  .form-row label {
+    flex: 1 1 auto;
+    margin-right: 5px;
+    margin: 0px;
+  }
+
+
 
   #talk-cta-button {
     display: block;
