--- a/src/components/HomeSections/FooterSection/footer.css
+++ b/src/components/HomeSections/FooterSection/footer.css
@@ -1,8 +1,10 @@
 .footer {
-  background-color: #333;
+  background-color: var(--bg);
   color: white;
   text-align: center;
-  padding: 20px;
+  padding: 10px 0;
+  width: 100%;
+  box-sizing: border-box;
 }
 
 .footer-links {
