Updated Contact Home Page and is now functioning. Added animation on star checks.

--- a/src/components/ContactPage/ContactPage.css
+++ b/src/components/ContactPage/ContactPage.css
@@ -93,7 +93,7 @@
 }
 
 .error-message {
-  color: #ff4d4f; /* Red color for errors */
+  color: #b5191c; /* Red color for errors */
   margin-bottom: 15px;
   font-size: 1.1rem;
   text-align: center;
