--- a/src/App.css
+++ b/src/App.css
@@ -4,8 +4,13 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Judson:ital,wght@0,400;0,700;1,400&display=swap');
 
-body {
-  min-height: 100vh;
+html, body {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  width: 100vw;
+  height: 100vh;
+  overflow-x: hidden; /* Prevent horizontal overflow */
   display: grid;
   place-items: center;
   background-color: var(--bg);
