--- a/src/components/HomeSections/FeatureSection/featureSection.css
+++ b/src/components/HomeSections/FeatureSection/featureSection.css
@@ -1,7 +1,8 @@
 .feature-section {
   padding: 50px;
   text-align: center;
-  background-color: var(--bg);
+  background-color: #2d3436;
+  background-image: linear-gradient(315deg, #2d3436 0%, #000000 74%);
 }
 
 .rotating-word-section {
