--- a/src/components/HomeSections/HeroSection/heroSection.css
+++ b/src/components/HomeSections/HeroSection/heroSection.css
@@ -3,10 +3,10 @@
       rgba(29, 27, 38, 0.5), /* Dark gradient with slight transparency */
       rgba(29, 27, 38, 0.5)
     ),
-    url("../../../../public/photos/starrysky.webp"); /* Your background image */
+    url("../../../../public/photos/starrysky-main.webp"); /* Your background image */
   background-size: cover; /* Ensure the image covers the full section */
   background-position: center; /* Center the image */
-  height: 80vh; /* Height of the section */
+  height: 60vh; /* Height of the section */
   display: flex;
   align-items: center;
   color: var(--secondary-amber);
@@ -14,6 +14,7 @@
   font-family: "Inter";
   padding: 0 5rem;
 }
+
 
 .hero-content {
   max-width: 600px;
@@ -144,6 +145,10 @@
   100% {
     background-position: 0% 50%;
   }
+}
+
+.hidden-text {
+  width: auto;
 }
 
 
